Fix card link sometimes being clipped

--- a/components/card/index.css
+++ b/components/card/index.css
@@ -284,7 +284,7 @@
 
 .Card:not(.Card--fill) .Card-link:not(.Card-link--silent) {
   padding: 0 1rem 0 0.8rem;
-  margin: 0.2rem 0 -1.5rem -0.8rem;
+  margin: 0.2rem 0 0 -0.8rem;
 }
 
 @media (min-width: 500px) {
